@@ -630,16 +630,16 @@ class build_ext(Command):
         (inplace option).
         """
         fullname = self.get_ext_fullname(ext_name)
-        filename = self.get_ext_filename(fullname)
+        modpath = fullname.split('.')
+        package = '.'.join(modpath[0:-1])
+        base = modpath[-1]
+        filename = self.get_ext_filename(base)
         if not self.inplace:
             # no further work needed
             return os.path.join(self.build_lib, filename)
 
         # the inplace option requires to find the package directory
         # using the build_py command
-        modpath = fullname.split('.')
-        package = '.'.join(modpath[0:-1])
-        base = modpath[-1]
         build_py = self.get_finalized_command('build_py')
         package_dir = os.path.abspath(build_py.get_package_dir(package))
         return os.path.join(package_dir, filename)
